--- a/index.html
+++ b/index.html
@@ -112,5 +112,6 @@
   <button onclick="closeInfoModal()">닫기</button>
 </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
