--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <span
     style="color: red; font-size: 14px; font-weight: normal; margin-left: 10px; cursor: pointer;"
     data-info="Instructions"
-    span class="info-icon"
+    class="info-icon"
   >
     [사용방법]
   </span>
