--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 <!-- 사용자 지정 입력 필드 추가 -->
 <div class="row-3">
   <div>
-    <label>BTC 블록 보상 (BTC)<span class="info-icon" data-info="block_reward" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>BTC 블록 보상 (BTC)<span class="info-icon" data-info="block_reward" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" step="any" id="custom_block_reward" placeholder="예: 3.125" />
   </div>
   <div>
-    <label>BTC 시세 ($)<span class="info-icon" data-info="btc_price" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>BTC 시세 ($)<span class="info-icon" data-info="btc_price" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" step="any" id="custom_btc_price" placeholder="자동 불러오기" />
   </div>
   <div>
@@ -53,30 +53,30 @@
   <label><input type="radio" name="hashrate_unit" value="TH/s" checked> TH/s</label>
   <label><input type="radio" name="hashrate_unit" value="GH/s"> GH/s</label>
   <label><input type="radio" name="hashrate_unit" value="MH/s"> MH/s</label>
-  <label><span class="info-icon" data-info="hashrate" style="color: red; margin-left: -30px;">ⓘ</span></label>
+  <label><span class="info-icon" data-info="hashrate" style="color: #ff4d4d; margin-left: -30px;">ⓘ</span></label>
 </div>
 
 <input type="number" id="hashrate" value="670" placeholder="해시레이트" />
 
 <div class="row-3">
   <div>
-    <label>전기 요금 ($/kwh)<span class="info-icon" data-info="electricity" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>전기 요금 ($/kwh)<span class="info-icon" data-info="electricity" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" id="electricity" value="0.036" />
   </div>
   <div>
-    <label>전력 소비량 (kw/TH)<span class="info-icon" data-info="power" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>전력 소비량 (kw/TH)<span class="info-icon" data-info="power" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" id="power" value="0.019" />
   </div>
   <div>
-    <label>사용 시간 (h)<span class="info-icon" data-info="hours" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>사용 시간 (h)<span class="info-icon" data-info="hours" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" id="hours" value="24" />
   </div>
 </div>
 
-<label>풀 수수료 (%)<span class="info-icon" data-info="fee" style="color: red; margin-left: 10px;">ⓘ</span></label>
+<label>풀 수수료 (%)<span class="info-icon" data-info="fee" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
 <input type="number" id="fee" value="23.4" />
 
-<label>장비 가격 ($)<span class="info-icon" data-info="hardware_cost" style="color: red; margin-left: 10px;">ⓘ</span></label>
+<label>장비 가격 ($)<span class="info-icon" data-info="hardware_cost" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
 <input type="number" id="hardware_cost" value="10500" />
 
 <div class="button-container">
