--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <input type="number" step="any" id="custom_btc_price" placeholder="자동 불러오기" />
   </div>
   <div>
-    <label>USD → KRW 환율<span class="info-icon" data-info="usd_krw" style="color: red; margin-left: 10px;">ⓘ</span></label>
+    <label>USD → KRW 환율<span class="info-icon" data-info="usd_krw" style="color: #ff4d4d; margin-left: 10px;">ⓘ</span></label>
     <input type="number" step="any" id="custom_usd_krw" placeholder="자동 불러오기" />
   </div>
 </div>
