--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2>
   BTC 채굴 수익 계산기
   <span
-    style="color: red; font-size: 14px; font-weight: normal; margin-left: 10px; cursor: pointer;"
+    style="color: #ff4d4d; font-size: 14px; font-weight: normal; margin-left: 10px; cursor: pointer;"
     data-info="Instructions"
     class="info-icon"
   >
