--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <p><strong>일일 순이익:</strong> $<span id="daily_profit"></span></p>
   <p><strong>ROI (투자 회수기간):</strong> <span id="roi"></span> 일</p>
 </div>
-<p class="recovery-text">* 그래프 항목 터치로 on/off 조절 가능</p>
+<span id="toggle-hint"></span>
 <canvas id="profitChart"></canvas>
 
     <!-- 투자금액 회수 시점 텍스트 -->
