--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
 
 <canvas id="profitChart"></canvas>
 
-
+    <!-- 투자금액 회수 시점 텍스트 -->
+    <p id="investmentRecoveryText" style="margin-top: 10px; font-size: 14px; display: none;">
+        <span class="green-circle">■</span>
+        <span style="recovery-text">투자금액을 회수하는 시점입니다.</span>
+    </p>
 
 <div id="exchangeModal">
   <p><strong>실시간 환율 (USD → KRW):</strong> ₩<span id="exchangeRateDisplay"></span></p>
